--- a/dev/tasks/tasks.yml
+++ b/dev/tasks/tasks.yml
@@ -1088,6 +1088,12 @@ tasks:
       image: {{ image }}
 {% endfor %}
 
+  test-cpp-arm64:
+    ci: github
+    template: docker-tests/github.linux.arm64.yml
+    params:
+      image: ubuntu-cpp
+
   # Use azure to run valgrind tests to prevent OOM
   test-conda-cpp-valgrind:
     ci: azure
