Undo dummy change

--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -49,7 +49,7 @@ permissions:
   contents: read
 
 env:
-  ARROW_ENABLE_TIMING_TESTS: "OFF"
+  ARROW_ENABLE_TIMING_TESTS: OFF
   DOCKER_VOLUME_PREFIX: ".docker/"
 
 jobs:
