--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -105,10 +105,11 @@ jobs:
           fetch-depth: 0
       - name: Install MATLAB
         uses: matlab-actions/setup-matlab@v1
-      - name: Enable Developer Command Prompt for Microsoft Visual C++
-        uses: ilammy/msvc-dev-cmd@v1
-      - name: Build MATLAB Interface
-        run: bash ci/scripts/matlab_build.sh $(pwd)
+      - name: Build
+        shell: cmd
+        run: |
+          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
+          bash ci/scripts/matlab_build.sh $(pwd)
       - name: Run MATLAB Tests
         env:
           # Add the installation directory to the MATLAB Search Path by
