get right value of pwd

--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -109,7 +109,7 @@ jobs:
         shell: cmd
         run: |
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
-          bash -c "ci/scripts/matlab_build.sh D:\\a\\arrow\\arrow"
+          bash -c "ci/scripts/matlab_build.sh $(pwd)"
       - name: Run MATLAB Tests
         env:
           # Add the installation directory to the MATLAB Search Path by
