--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -105,9 +105,11 @@ jobs:
           fetch-depth: 0
       - name: Install MATLAB
         uses: matlab-actions/setup-matlab@v1
-      - name: Build
+      - name: Build MATLAB Interface
         shell: cmd
-        run: call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
+        run: |
+          call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
+          bash -c "ci/scripts/matlab_build.sh $(pwd)"
       - name: Run MATLAB Tests
         env:
           # Add the installation directory to the MATLAB Search Path by
