--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -84,6 +84,8 @@ jobs:
         run: brew install ninja
       - name: Install MATLAB
         uses: matlab-actions/setup-matlab@v1
+      - name: Install ccache
+        run: brew install ccache
       - name: Setup ccache
         shell: bash
         run: |
