--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -150,19 +150,18 @@ jobs:
       - name: Setup ccache
         shell: bash
         run: ci/scripts/ccache_setup.sh
-      - name: ccache info
-        id: ccache-info
+      - name: Get Date
+        id: get-date
         shell: bash
-        run: echo "cache-dir=$(ccache --get-config cache_dir)" >> $GITHUB_OUTPUT
+        run: |
+          echo "date=$(/bin/date -u "+%Y%m%d")" >> $GITHUB_OUTPUT
       - name: Cache ccache
         uses: actions/cache@v3
         with:
-          path: ${{ steps.ccache-info.outputs.cache-dir }}
-          key: matlab-ccache-windows-${{ env.CACHE_VERSION }}-${{ hashFiles('cpp/**') }}
-          restore-keys: matlab-ccache-windows-${{ env.CACHE_VERSION }}-
-        env:
-          # We can invalidate the current cache by updating this.
-          CACHE_VERSION: "2022-09-13"
+          path: |
+            cpp/**
+          key: cpp-ccache-for-matlab-windows-${{ steps.get-date.outputs.date }}-${{ hashFiles('cpp/**') }}
+          restore-keys: cpp-ccache-for-matlab-windows-${{ steps.get-date.outputs.date }}-
       - name: Build MATLAB Interface
         shell: cmd
         run: |
