--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -150,7 +150,7 @@ jobs:
       - name: Setup ccache
         shell: bash
         run: ci/scripts/ccache_setup.sh
-      - name: Get Date 
+      - name: Get Date
         id: get-date
         shell: bash
         run: |
@@ -160,7 +160,7 @@ jobs:
         with:
           path: |
             cpp/**
-          key: cpp-ccache-for-matlab-windows-${{ steps.get-date.outputs.date }}-${{ hashFiles('cpp/**') }}
+          key: cpp-ccache-for-matlab-windows-${{ hashFiles('cpp/**') }}
           restore-keys: cpp-ccache-for-matlab-windows-
       - name: Build MATLAB Interface
         shell: cmd
