--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -66,11 +66,8 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ${{ steps.ccache-info.outputs.cache-dir }}
-          key: matlab-ccache-ubuntu-${{ env.CACHE_VERSION }}-${{ hashFiles('cpp/**') }}
-          restore-keys: matlab-ccache-ubuntu-${{ env.CACHE_VERSION }}-
-        env:
-          # We can invalidate the current cache by updating this.
-          CACHE_VERSION: "2022-09-13"
+          key: ccache-for-build-matlab-ubuntu-${{ hashFiles('cpp/**', 'matlab/**') }}
+          restore-keys: ccache-for-build-matlab-ubuntu-
       - name: Build MATLAB Interface
         run: ci/scripts/matlab_build.sh $(pwd)
       - name: Run MATLAB Tests
@@ -115,11 +112,8 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ${{ steps.ccache-info.outputs.cache-dir }}
-          key: matlab-ccache-macos-${{ env.CACHE_VERSION }}-${{ hashFiles('cpp/**') }}
-          restore-keys: matlab-ccache-macos-${{ env.CACHE_VERSION }}-
-        env:
-          # We can invalidate the current cache by updating this.
-          CACHE_VERSION: "2022-09-13"
+          key: ccache-for-build-matlab-macos-${{ hashFiles('cpp/**', 'matlab/**') }}
+          restore-keys: ccache-for-build-matlab-macos-
       - name: Build MATLAB Interface
         run: ci/scripts/matlab_build.sh $(pwd)
       - name: Run MATLAB Tests
