--- a/.github/workflows/matlab.yml
+++ b/.github/workflows/matlab.yml
@@ -144,11 +144,6 @@ jobs:
       - name: Setup ccache
         shell: bash
         run: ci/scripts/ccache_setup.sh
-      - name: Get Date
-        id: get-date
-        shell: bash
-        run: |
-          echo "date=$(/bin/date -u "+%Y%m%d")" >> $GITHUB_OUTPUT
       - name: ccache info
         id: ccache-info
         shell: bash
@@ -158,7 +153,7 @@ jobs:
         with:
           path: |
             ${{ steps.ccache-info.outputs.cache-dir }}
-          key: ccache-for-build-matlab-windows-${{ steps.get-date.outputs.date }}-${{ hashFiles('cpp/**', 'matlab/**') }}
+          key: ccache-for-build-matlab-windows-${{ hashFiles('cpp/**', 'matlab/**') }}
           restore-keys: ccache-for-build-matlab-windows-
       - name: Build MATLAB Interface
         shell: cmd
