--- a/dev/tasks/linux-packages/github.linux.yml
+++ b/dev/tasks/linux-packages/github.linux.yml
@@ -37,7 +37,7 @@ jobs:
         if: |
           env.ARCHITECTURE == 'amd64'
         run: |
-          ls -lhs /usr/local/bin/
+          ls -lhs /usr/local/share/
           du -hs /usr/local/bin
           df -h
           du -hsc /opt/* /usr/local/*
@@ -69,95 +69,3 @@ jobs:
           # 376MB
           sudo rm -rf /opt/hostedtoolcache/node || :
           df -h
-      - name: Set up Ruby
-        run: |
-          sudo apt update
-          sudo apt install -y \
-            rake \
-            ruby \
-            ruby-dev
-      - name: Prepare apache-arrow-apt-source for arm64
-        if: |
-          env.ARCHITECTURE == 'arm64'
-        run: |
-          pushd arrow/dev/tasks/linux-packages/apache-arrow-apt-source/apt
-          for target in *-*; do
-            cp -a ${target} ${target}-arm64
-          done
-          popd
-      - name: Prepare apache-arrow-release for arm64
-        if: |
-          env.ARCHITECTURE == 'arm64'
-        run: |
-          pushd arrow/dev/tasks/linux-packages/apache-arrow-release/yum
-          for target in *-*; do
-            cp -a ${target} ${target}-aarch64
-          done
-          popd
-      - name: Build
-        run: |
-          set -e
-          pushd arrow/dev/tasks/linux-packages
-          rake version:update
-          rake docker:pull || :
-          rake --trace {{ task_namespace }}:build BUILD_DIR=build
-          popd
-        env:
-          APT_TARGETS: {{ target }}
-          ARROW_VERSION: {{ arrow.version }}
-          REPO: {{ '${{ secrets.REPO }}' }}
-          YUM_TARGETS: {{ target }}
-      - name: Docker Push
-        continue-on-error: true
-        shell: bash
-        run: |
-          pushd arrow/dev/tasks/linux-packages
-          rake docker:push
-          popd
-        env:
-          APT_TARGETS: {{ target }}
-          REPO: {{ '${{ secrets.REPO }}' }}
-          YUM_TARGETS: {{ target }}
-      - name: Set up test
-        run: |
-          sudo apt install -y \
-            apt-utils \
-            cpio \
-            createrepo-c \
-            devscripts \
-            gpg \
-            rpm \
-            rsync
-          gem install --user-install apt-dists-merge
-          (echo "Key-Type: RSA"; \
-           echo "Key-Length: 4096"; \
-           echo "Name-Real: Test"; \
-           echo "Name-Email: test@example.com"; \
-           echo "%no-protection") | \
-            gpg --full-generate-key --batch
-          GPG_KEY_ID=$(gpg --list-keys --with-colon test@example.com | grep fpr | cut -d: -f10)
-          echo "GPG_KEY_ID=${GPG_KEY_ID}" >> ${GITHUB_ENV}
-          case "{{ target }}" in
-            almalinux-*|amazon-linux-*|centos-*)
-              repositories_dir=arrow/dev/tasks/linux-packages/apache-arrow-release/yum/repositories
-              rpm2cpio ${repositories_dir}/*/*/*/Packages/apache-arrow-release-*.rpm | \
-                cpio -id
-              mv etc/pki/rpm-gpg/RPM-GPG-KEY-Apache-Arrow \
-                arrow/dev/tasks/linux-packages/KEYS
-              ;;
-          esac
-          gpg --export --armor test@example.com >> arrow/dev/tasks/linux-packages/KEYS
-      - name: Test
-        run: |
-          set -e
-          pushd arrow/dev/tasks/linux-packages
-          rake --trace {{ task_namespace }}:test
-          rm -rf {{ task_namespace }}/repositories
-          popd
-        env:
-          APT_TARGETS: {{ target }}
-          ARROW_VERSION: {{ arrow.version }}
-          YUM_TARGETS: {{ target }}
-
-      {% set patterns = upload_extensions | format_all("arrow/dev/tasks/linux-packages/*/*/repositories/**/*{}") %}
-      {{ macros.github_upload_releases(patterns)|indent }}
