--- a/cpp/Brewfile
+++ b/cpp/Brewfile
@@ -31,7 +31,7 @@ brew "llvm@14"
 brew "lz4"
 brew "ninja"
 brew "openssl@1.1"
-brew "protobuf"
+brew "protobuf@21"
 brew "python"
 brew "rapidjson"
 brew "snappy"
