--- a/cpp/Brewfile
+++ b/cpp/Brewfile
@@ -26,7 +26,7 @@ brew "flatbuffers"
 brew "git"
 brew "glog"
 brew "googletest"
-brew "grpc"
+brew "grpc@1.54"
 brew "llvm@14"
 brew "lz4"
 brew "ninja"
