--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -78,7 +78,7 @@ jobs:
             cache: conda-python-3.10
             image: conda-python-pandas
             title: AMD64 Conda Python 3.10 Pandas latest
-            python: 3.10
+            python: "3.10"
             pandas: latest
     env:
       PYTHON: ${{ matrix.python || 3.8 }}
