--- a/csharp/src/Apache.Arrow.Flight/Apache.Arrow.Flight.csproj
+++ b/csharp/src/Apache.Arrow.Flight/Apache.Arrow.Flight.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <Protobuf Include="..\..\..\format\Flight.proto" Access="internal" />
+    <Protobuf Include="..\..\..\format\FlightSql.proto" Access="public" />
   </ItemGroup>
 
 </Project>
