--- a/dev/tasks/linux-packages/apache-arrow-release/yum/apache-arrow-release.spec.in
+++ b/dev/tasks/linux-packages/apache-arrow-release/yum/apache-arrow-release.spec.in
@@ -17,7 +17,10 @@
 # specific language governing permissions and limitations
 # under the License.
 
-%define use_dnf (%{rhel} >= 8)
+%define _amzn %{?amzn:%{amzn}}%{!?amzn:0}
+%define _rhel %{?rhel:%{rhel}}%{!?rhel:0}
+
+%define use_dnf (%{_rhel} >= 8 || %{_amzn} >= 2023)
 %if %{use_dnf}
 %define yum_repository_enable() (dnf config-manager --set-enabled %1)
 %define yum_repository_disable() (dnf config-manager --set-disabled %1)
@@ -80,7 +83,7 @@ rm -rf $RPM_BUILD_ROOT
 %config(noreplace) %{_sysconfdir}/yum.repos.d/Apache-Arrow.repo
 
 %post
-if grep -q 'Amazon Linux release 2' /etc/system-release 2>/dev/null; then
+if grep -q 'Amazon Linux' /etc/system-release 2>/dev/null; then
   %{yum_repository_enable apache-arrow-amazon-linux}
 elif grep -q 'Red Hat Enterprise Linux Server release 7' /etc/system-release 2>/dev/null; then
   %{yum_repository_enable apache-arrow-rhel7}
