--- a/dev/tasks/linux-packages/apache-arrow-release/yum/apache-arrow-release.spec.in
+++ b/dev/tasks/linux-packages/apache-arrow-release/yum/apache-arrow-release.spec.in
@@ -21,6 +21,8 @@
 %define _rhel %{?rhel:%{rhel}}%{!?rhel:0}
 
 %define use_dnf (%{_rhel} >= 8 || %{_amzn} >= 2023)
+%define use_epel (%{_amzn} < 2023)
+
 %if %{use_dnf}
 %define yum_repository_enable() (dnf config-manager --set-enabled %1)
 %define yum_repository_disable() (dnf config-manager --set-disabled %1)
@@ -40,7 +42,9 @@ Source0:	@PACKAGE@-%{version}.tar.gz
 
 BuildArch:	noarch
 
+%if %{use_epel}
 Requires:	epel-release
+%endif
 %if %{use_dnf}
 Requires:	dnf-command(config-manager)
 %else
