--- a/dev/tasks/linux-packages/apache-arrow/yum/arrow.spec.in
+++ b/dev/tasks/linux-packages/apache-arrow/yum/arrow.spec.in
@@ -76,6 +76,7 @@
 %define use_s3 0
 %define use_vala (%{_rhel} >= 8 || %{is_amazon_linux})
 
+%define have_grpc (%{_amzn} >= 2023)
 %define have_lz4_libs (%{_rhel} >= 8 || %{_amzn} >= 2023)
 %define have_rapidjson (%{_rhel} != 8)
 %define have_re2 (%{_rhel} >= 8 || %{_amzn} >= 2023)
@@ -111,6 +112,10 @@ BuildRequires:	gflags-devel
 BuildRequires:	git
 %if %{use_glog}
 BuildRequires:	glog-devel
+%endif
+%if %{have_grpc}
+BuildRequires:	grpc-devel
+BuildRequires:	grpc-plugins
 %endif
 %if %{use_gcs}
 BuildRequires:	json-devel
@@ -296,6 +301,10 @@ Requires:	bzip2-devel
 Requires:	c-ares-devel
 %endif
 Requires:	curl-devel
+%if %{have_grpc}
+Requires:	grpc-devel
+Requires:	grpc-plugins
+%endif
 %if %{use_gcs}
 Requires:	json-devel
 %endif
