Use infer_schema as the S3

--- a/r/NAMESPACE
+++ b/r/NAMESPACE
@@ -108,6 +108,10 @@ S3method(head,ExecPlanReader)
 S3method(head,RecordBatchReader)
 S3method(head,Scanner)
 S3method(head,arrow_dplyr_query)
+S3method(infer_schema,ArrowTabular)
+S3method(infer_schema,Dataset)
+S3method(infer_schema,RecordBatchReader)
+S3method(infer_schema,arrow_dplyr_query)
 S3method(infer_type,ArrowDatum)
 S3method(infer_type,Expression)
 S3method(infer_type,blob)
@@ -154,11 +158,6 @@ S3method(read_message,InputStream)
 S3method(read_message,MessageReader)
 S3method(read_message,default)
 S3method(row.names,ArrowTabular)
-S3method(schema,ArrowTabular)
-S3method(schema,Dataset)
-S3method(schema,RecordBatchReader)
-S3method(schema,arrow_dplyr_query)
-S3method(schema,default)
 S3method(sort,ArrowDatum)
 S3method(sort,Scalar)
 S3method(sum,ArrowDatum)
@@ -332,6 +331,7 @@ export(float64)
 export(gs_bucket)
 export(halffloat)
 export(hive_partition)
+export(infer_schema)
 export(infer_type)
 export(install_arrow)
 export(install_pyarrow)
