Set minimal arrow build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -425,6 +425,11 @@ services:
       ARROW_ENABLE_TIMING_TESTS:  # inherit
       ARROW_MIMALLOC: "ON"
       CMAKE_ARGS: "-DCMAKE_TOOLCHAIN_FILE=/arrow/ci/crosstool/crosstool.cmake"
+      BOOST_SOURCE: "BUNDLED"
+      Snappy_SOURCE: "BUNDLED"
+      gflags_SOURCE: "BUNDLED"
+      Thrift_SOURCE: "BUNDLED"
+      ARROW_WITH_ZLIB: "OFF"
     volumes: &ubuntu-volumes
       - .:/arrow:delegated
       - ${DOCKER_VOLUME_PREFIX}ubuntu-ccache:/ccache:delegated
