--- a/r/_pkgdown.yml
+++ b/r/_pkgdown.yml
@@ -138,152 +138,188 @@ articles:
       - developers/data_object_layout
 
 reference:
-  - title: Multi-file datasets
-    contents:
-      - open_dataset
-      - open_delim_dataset
-      - open_csv_dataset
-      - open_tsv_dataset
-      - write_dataset
-      - dataset_factory
-      - hive_partition
-      - map_batches
+- title: Read datasets
+  desc: >
+    Open multi-file datasets as Arrow Dataset objects.
+  contents:
+  - open_dataset
+  - open_delim_dataset
+  - open_csv_dataset
+  - open_tsv_dataset
 
-    - title: Multi-file datasets - R6 classes
-      desc: >
-        R6 classes useful for when working with multi-file datases in Arrow.
-      contents:
-        - Dataset
-        - Partitioning
-        - Expression
-        - Scanner
-        - FileFormat
-        - CsvFileFormat
-        - JsonFileFormat
-        - FileWriteOptions
-        - FragmentScanOptions
+- title: Write datasets
+  desc: >
+    Write multi-file datasets to disk.
+  contents:
+  - write_dataset
 
-  - title: Reading and writing files
-    contents:
-      - read_feather
-      - read_ipc_stream
-      - read_parquet
-      - read_delim_arrow
-      - read_json_arrow
-      - write_feather
-      - write_ipc_stream
-      - write_parquet
-      - write_csv_arrow
-      - write_to_raw
+- title: Read files
+  desc: >
+    Read files in a variety of formats in as tibbles or Arrow Tables.
+  contents:
+  - read_delim_arrow
+  - read_parquet
+  - read_feather
+  - read_ipc_stream
+  - read_json_arrow
 
+- title: Write files
+  desc: >
+     Write to files in a variety of formats.
+  contents:
+    - write_csv_arrow
+    - write_parquet
+    - write_feather
+    - write_ipc_stream
+    - write_to_raw
 
-  - title: C++ reader/writer interface
-    contents:
-      - ParquetFileReader
-      - ParquetArrowReaderProperties
-      - ParquetFileWriter
-      - ParquetWriterProperties
-      - FeatherReader
-      - CsvTableReader
-      - RecordBatchReader
-      - RecordBatchWriter
-      - CsvReadOptions
-      - CsvWriteOptions
-      - as_record_batch_reader
+- title: Creating Arrow data containers
+  desc: >
+   Classes and functions for creating Arrow data containers.
+  contents:
+    - scalar
+    - array
+    - ChunkedArray
+    - RecordBatch
+    - Table
+    - buffer
+    - vctrs_extension_array
 
-  - title: Arrow data containers
-    contents:
-      - scalar
-      - array
-      - ChunkedArray
-      - Scalar-class
-      - RecordBatch
-      - Table
-      - ArrayData
-      - buffer
-      - read_message
-      - concat_arrays
-      - concat_tables
-      - ExtensionArray
-      - vctrs_extension_array
-      - as_arrow_array
-      - as_chunked_array
-      - as_record_batch
-      - as_arrow_table
+- title: Working with Arrow data containers
+  desc: >
+    Functions for converting R objects to Arrow data containers and combining Arrow data containers.
+  contents:
+  - as_arrow_array
+  - as_chunked_array
+  - as_record_batch
+  - as_arrow_table
+  - concat_arrays
+  - concat_tables
 
-  - title: Arrow data types and schema
-    contents:
-      - schema
-      - infer_schema
-      - schema-class
-      - unify_schemas
-      - infer_type
-      - dictionary
-      - Field
-      - read_schema
-      - data-type
-      - DataType
-      - DictionaryType
-      - FixedWidthType
-      - new_extension_type
-      - vctrs_extension_type
-      - ExtensionType
-      - as_data_type
-      - as_schema
+- title: Arrow data types and schemas
+  desc: >
+    These functions allow you to create Arrow data types and schemas
+  contents:
+  - data-type
+  - dictionary
+  - new_extension_type
+  - vctrs_extension_type
+  - as_data_type
+  - infer_type
+  - Field
+  - schema
+  - unify_schemas
+  - as_schema
+  - infer_schema
+  - read_schema
 
-  - title: Flight
-    contents:
-      - load_flight_server
-      - flight_connect
-      - flight_disconnect
-      - flight_get
-      - flight_put
-      - list_flights
+- title: Computation
+  desc: >
+    Functions for computing values on Arrow data objects.
+  contents:
+  - acero
+  - arrow-functions
+  - arrow-verbs
+  - arrow-dplyr
+  - call_function
+  - match_arrow
+  - value_counts
+  - list_compute_functions
+  - register_scalar_function
+  - show_exec_plan
 
-  - title: File systems
-    contents:
-      - s3_bucket
-      - gs_bucket
-      - FileSystem
-      - FileInfo
-      - FileSelector
-      - copy_files
+- title: DuckDB
+  desc: >
+    Pass data to and from DuckDB
+  contents:
+  - to_arrow
+  - to_duckdb
 
-  - title: Input/Output
-    contents:
-      - InputStream
-      - mmap_open
-      - mmap_create
-      - OutputStream
-      - Message
-      - MessageReader
-      - compression
-      - Codec
-      - codec_is_available
+- title: File systems
+  desc: >
+   Functions for working with files on S3 and GCS
+  contents:
+  - s3_bucket
+  - gs_bucket
+  - copy_files
 
-  - title: Computation
-    contents:
-      - acero
-      - call_function
-      - match_arrow
-      - value_counts
-      - list_compute_functions
-      - register_scalar_function
-      - show_exec_plan
+- title: Flight
+  contents:
+    - load_flight_server
+    - flight_connect
+    - flight_disconnect
+    - flight_get
+    - flight_put
+    - list_flights
 
-  - title: Connections to other systems
-    contents:
-      - to_arrow
-      - to_duckdb
+- title: Arrow Configuration
+  contents:
+    - arrow_info
+    - cpu_count
+    - io_thread_count
+    - install_arrow
+    - install_pyarrow
+    - create_package_with_all_dependencies
 
-  - title: Configuration
-    contents:
-      - arrow_info
-      - cpu_count
-      - io_thread_count
-      - install_arrow
-      - install_pyarrow
-      - create_package_with_all_dependencies
+- title: Input/Output
+  contents:
+    - InputStream
+    - read_message
+    - mmap_open
+    - mmap_create
+    - OutputStream
+    - Message
+    - MessageReader
+    - compression
+    - Codec
+    - codec_is_available
+
+- title: File read/writer interface
+  contents:
+  - ParquetFileReader
+  - ParquetArrowReaderProperties
+  - ParquetFileWriter
+  - ParquetWriterProperties
+  - FeatherReader
+  - CsvTableReader
+  - CsvReadOptions
+  - CsvWriteOptions
+  - RecordBatchReader
+  - RecordBatchWriter
+  - as_record_batch_reader
+
+- title: Arrow data types, schemas, and containers - R6 classes
+  desc: >
+    R6 classes for Arrow data types.
+  contents:
+  - Schema
+  - DataType
+  - ArrayData
+  - DictionaryType
+  - FixedWidthType
+  - ExtensionType
+  - ArrayData
+  - ExtensionArray
+
+- title: Dataset and Filesystem R6 classes and helper functions
+  desc: >
+    R6 classes and helper functions useful for when working with multi-file datases in Arrow.
+  contents:
+  - Dataset
+  - dataset_factory
+  - Partitioning
+  - Expression
+  - Scanner
+  - FileFormat
+  - CsvFileFormat
+  - JsonFileFormat
+  - FileWriteOptions
+  - FragmentScanOptions
+  - hive_partition
+  - map_batches
+  - FileSystem
+  - FileInfo
+  - FileSelector
 
 repo:
   url:
