--- a/r/NAMESPACE
+++ b/r/NAMESPACE
@@ -460,7 +460,7 @@ importFrom(rlang,f_env)
 importFrom(rlang,f_rhs)
 importFrom(rlang,inform)
 importFrom(rlang,is_bare_character)
-importFrom(rlang,is_base_list)
+importFrom(rlang,is_bare_list)
 importFrom(rlang,is_call)
 importFrom(rlang,is_character)
 importFrom(rlang,is_empty)
